--- a/QuestOverlayPlugin/QuestOverlayPlugin.csproj
+++ b/QuestOverlayPlugin/QuestOverlayPlugin.csproj
@@ -70,6 +70,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Overlay\QuestListButton.xaml.cs">
+      <DependentUpon>QuestListButton.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Overlay\QuestListView.xaml.cs">
+      <DependentUpon>QuestListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Overlay\QuestListViewModel.cs" />
+    <Compile Include="Overlay\QuestView.xaml.cs">
+      <DependentUpon>QuestView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Overlay\QuestViewModel.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -85,6 +96,23 @@
       <Project>{BE444626-5DDB-4F54-A7AB-C4C45DF80A78}</Project>
       <Name>HSReflection</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Overlay\QuestListButton.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Overlay\QuestListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Overlay\QuestView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\QuestIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
