--- a/AssetRipperFetcher/AssetRipperFetcher.csproj
+++ b/AssetRipperFetcher/AssetRipperFetcher.csproj
@@ -1,42 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project InitialTargets="PreCompileClone" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F567CA2-C217-4DBB-B31F-559CA35C629E}</ProjectGuid>
+    <PlatformTarget>x86</PlatformTarget>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AssetRipperFetcher</RootNamespace>
-    <AssemblyName>AssetRipperFetcher</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
-  </PropertyGroup>
-  <Target Name="PreCompileClone">
-    <GitClient Condition="!Exists('obj/AssetRipper')" Command="clone" Arguments="https://github.com/AssetRipper/AssetRipper.git obj/AssetRipper" />
-    <GitClient Command="fetch" Arguments="--all" LocalPath="obj/AssetRipper" />
-    <GitClient Command="reset" Arguments="--hard origin/master" LocalPath="obj/AssetRipper" />
-  </Target>
+
   <ItemGroup>
     <PackageReference Include="MSBuildTasks">
       <Version>1.5.0.235</Version>
@@ -44,5 +13,11 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
+  <Target Name="PreCompileClone">
+	<MSBuild.Community.Tasks.Git.GitClient Condition="!Exists('obj/AssetRipper')" Command="clone" Arguments="https://github.com/AssetRipper/AssetRipper.git obj/AssetRipper" />
+    <MSBuild.Community.Tasks.Git.GitClient Command="fetch" Arguments="--all" LocalPath="obj/AssetRipper" />
+    <MSBuild.Community.Tasks.Git.GitClient Command="reset" Arguments="--hard origin/master" LocalPath="obj/AssetRipper" />
+  </Target>
+
 </Project>
