--- a/Texture2DExtractor/Texture2DExtractor.csproj
+++ b/Texture2DExtractor/Texture2DExtractor.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.9.0-preview1" />
+    <PackageReference Include="Cfg-NET" Version="0.12.0" />
   </ItemGroup>
 
   <ItemGroup>
