--- a/Texture2DExtractor/Texture2DExtractor.csproj
+++ b/Texture2DExtractor/Texture2DExtractor.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cfg-NET" Version="0.12.0" />
+    <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="6.0.0" />
+    <PackageReference Include="PortableSettingsProvider" Version="0.2.4" />
   </ItemGroup>
 
   <ItemGroup>
