--- a/HearthMirrorGenerator/HearthMirrorGenerator.csproj
+++ b/HearthMirrorGenerator/HearthMirrorGenerator.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ICSharpCode.Decompiler" Version="7.2.0.6839-preview4" GeneratePathProperty="true" PrivateAssets="all" />
+    <PackageReference Include="ICSharpCode.Decompiler" Version="7.2.0.6844" GeneratePathProperty="true" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="[3.11.0,4.0.0-1)" PrivateAssets="all" />
   </ItemGroup>
 
