--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
     name: Should Release
     runs-on: ubuntu-latest
     outputs:
-      version: v${{ steps.get-version.outputs.version }}
+      version: ${{ steps.get-version.outputs.version }}
       tag: ${{ steps.get-tag.outputs.tag }}
     steps:
       - name: Checkout Repo
@@ -77,4 +77,4 @@ jobs:
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: './HearthstoneQuestOverlay.zip'
-          tag: v${{ needs.should-release.outputs.version }}
+          tag: ${{ needs.should-release.outputs.version }}
