--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,11 @@ on:
       - "**.pubxml"
       - "**/Resources/**.*"
   workflow_dispatch:
+    inputs:
+      doNotRelease:
+        description: 'Force run and do not release'
+        required: false
+        type: boolean
 
 jobs:
   should-release:
@@ -19,6 +24,7 @@ jobs:
     outputs:
       version: ${{ steps.get-version.outputs.version }}
       tag: ${{ steps.get-tag.outputs.tag }}
+    if: ${{ !github.event.inputs.doNotRelease }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -36,7 +42,7 @@ jobs:
     name: Release
     runs-on: windows-2022
     needs: should-release
-    if: needs.should-release.outputs.version != needs.should-release.outputs.tag
+    if: needs.should-release.outputs.version != needs.should-release.outputs.tag || github.event.inputs.doNotRelease
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -62,13 +68,14 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: Build solution
-        run: msbuild HearthstoneQuestOverlay.sln -t:restore,build -p:RestorePackagesConfig=true -p:Configuration=Release
+        run: msbuild HearthstoneQuestOverlay.sln -m -t:restore,build -p:RestorePackagesConfig=true -p:Configuration=Release
       - name: Zip release
         uses: papeloto/action-zip@v1
         with:
           files: QuestOverlayPlugin/bin/HearthstoneQuestOverlay/
           dest: HearthstoneQuestOverlay.zip
       - name: Create Release
+        if: ${{ !github.event.inputs.doNotRelease }}
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: false
@@ -78,3 +85,10 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: './HearthstoneQuestOverlay.zip'
           tag: ${{ needs.should-release.outputs.version }}
+      - name: Create Artifact
+        if: github.event.inputs.doNotRelease
+        uses: actions/upload-artifact@v3
+        with:
+          name: HearthstoneQuestOverlay
+          path: HearthstoneQuestOverlay.zip
+          retention-days: 1
