--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+      # TODO: setup HDT installation cache
       - name: Download HSDeckTracker
         uses: robinraju/release-downloader@v1.3
         with:
@@ -62,10 +63,6 @@ jobs:
         uses: microsoft/setup-msbuild@v1.1
         with:
           msbuild-architecture: x64
-      #- name: Setup dotnet
-      #  uses: actions/setup-dotnet@v2
-      #  with:
-      #    dotnet-version: 6.0.x
       - name: Build solution
         run: msbuild HearthstoneQuestOverlay.sln -m -t:restore,build -p:RestorePackagesConfig=true -p:Configuration=Release
       - name: Zip release
