--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,10 +79,12 @@ jobs:
       - name: Build solution
         run: msbuild HearthstoneQuestOverlay.sln -m -t:restore,build -p:RestorePackagesConfig=true -p:Configuration=Release
       - name: Zip release
-        uses: papeloto/action-zip@v1
-        with:
-          files: QuestOverlayPlugin/bin/HearthstoneQuestOverlay/
-          dest: HearthstoneQuestOverlay.zip
+#        uses: papeloto/action-zip@v1
+#        with:
+#          files: QuestOverlayPlugin/bin/HearthstoneQuestOverlay/
+#          dest: HearthstoneQuestOverlay.zip
+        run: 7z a -tzip HearthstoneQuestOverlay QuestOverlayPlugin/bin/HearthstoneQuestOverlay
+        shell: cmd
       - name: Create Release
         if: ${{ !github.event.inputs.doNotRelease }}
         uses: ncipollo/release-action@v1
