--- a/QuestOverlayPlugin/QuestOverlayPlugin.csproj
+++ b/QuestOverlayPlugin/QuestOverlayPlugin.csproj
@@ -12,7 +12,7 @@
     <TargetFramework>net472</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
-    <Version>1.1.1</Version>
+    <Version>1.2.0</Version>
   </PropertyGroup>
   <Target Name="PostBuild" AfterTargets="Build">
     <ItemGroup>
@@ -88,6 +88,7 @@
   <ItemGroup>
     <Resource Include="Resources\Frame.png" />
     <Resource Include="Resources\QuestIcon.png" />
+    <Resource Include="Resources\Rewards_Track_-_XP_Boost.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Games-icon.png" />
