--- a/QuestOverlayPlugin/QuestOverlayPlugin.csproj
+++ b/QuestOverlayPlugin/QuestOverlayPlugin.csproj
@@ -12,7 +12,11 @@
     <TargetFramework>net472</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
-    <Version>1.2.1</Version>
+    <Version>1.3.0</Version>
+    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+    <CompilerGeneratedFilesOutputPath>obj\Generated</CompilerGeneratedFilesOutputPath>
+    <UseWPF>true</UseWPF>
+    <IncludePackageReferencesDuringMarkupCompilation>true</IncludePackageReferencesDuringMarkupCompilation>
   </PropertyGroup>
   <Target Name="PostBuild" AfterTargets="Build">
     <ItemGroup>
@@ -21,6 +25,9 @@
     <Copy SourceFiles="@(FilesToCopy)" DestinationFiles="@(FilesToCopy->'$(APPDATA)\HearthstoneDeckTracker\Plugins\HearthstoneQuestOverlay\%(RecursiveDir)%(Filename)%(Extension)')" Condition=" '$(CI)' != 'true' " SkipUnchangedFiles="true" />
     <Copy SourceFiles="@(FilesToCopy)" DestinationFiles="@(FilesToCopy->'$(TargetDir)..\..\HearthstoneQuestOverlay\%(RecursiveDir)%(Filename)%(Extension)')" Condition=" '$(Configuration)' == 'Release' " SkipUnchangedFiles="true" />
   </Target>
+  <ItemGroup>
+    <None Remove="QuestOverlayPlugin.csproj.DotSettings" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="HearthMirror">
       <HintPath>$(HSDTPath)\HearthMirror.dll</HintPath>
@@ -65,6 +72,9 @@
     <Compile Update="Overlay\QuestListView.xaml.cs">
       <DependentUpon>QuestListView.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Overlay\QuestViewEmpty.xaml.cs">
+      <DependentUpon>QuestViewEmpty.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Overlay\QuestView.xaml.cs">
       <DependentUpon>QuestView.xaml</DependentUpon>
     </Compile>
@@ -79,27 +89,11 @@
   <ItemGroup>
     <ProjectReference Include="..\HSReflection\HSReflection.csproj" />
     <ProjectReference Include="..\TextureExtractor\TextureExtractor.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="Controls\HearthstoneTextBlock.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Controls\SettingsControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Overlay\QuestListButton.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Overlay\QuestListView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Overlay\QuestView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <ProjectReference Include="..\UpdaterGenerator\UpdaterGenerator.csproj">
+      <Name>UpdaterGenerator</Name>
+      <OutputItemType>Analyzer</OutputItemType>
+      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Frame.png" />
