Update for Naga
Closes #6 and Closes #7

--- a/TextureExtractor/TextureExtractor.csproj
+++ b/TextureExtractor/TextureExtractor.csproj
@@ -1,7 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\Version.props" />
+
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
