--- a/QuestOverlayPlugin/QuestOverlayPlugin.csproj
+++ b/QuestOverlayPlugin/QuestOverlayPlugin.csproj
@@ -1,4 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <Import Project="..\Version.props" />
+
   <PropertyGroup>
     <HSDTPathLength>$([MSBUILD]::Subtract($([System.IO.Directory]::GetDirectories(`$(LocalAppData)\HearthstoneDeckTracker`, `app-*`).Length), 1))</HSDTPathLength>
     <HSDTPath>$([System.IO.Directory]::GetDirectories(`$(LocalAppData)\HearthstoneDeckTracker`, `app-*`)[$(HSDTPathLength)])</HSDTPath>
@@ -10,14 +13,14 @@
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <ProjectGuid>{48EAC139-5942-437D-BFD1-01823ACA9930}</ProjectGuid>
     <TargetFramework>net472</TargetFramework>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
-    <Version>1.3.0</Version>
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
     <CompilerGeneratedFilesOutputPath>obj\Generated</CompilerGeneratedFilesOutputPath>
     <UseWPF>true</UseWPF>
     <IncludePackageReferencesDuringMarkupCompilation>true</IncludePackageReferencesDuringMarkupCompilation>
   </PropertyGroup>
+
   <Target Name="PostBuild" AfterTargets="Build">
     <ItemGroup>
       <FilesToCopy Include="$(TargetDir)**\*.dll" />
@@ -25,9 +28,11 @@
     <Copy SourceFiles="@(FilesToCopy)" DestinationFiles="@(FilesToCopy->'$(APPDATA)\HearthstoneDeckTracker\Plugins\HearthstoneQuestOverlay\%(RecursiveDir)%(Filename)%(Extension)')" Condition=" '$(CI)' != 'true' " SkipUnchangedFiles="true" />
     <Copy SourceFiles="@(FilesToCopy)" DestinationFiles="@(FilesToCopy->'$(TargetDir)..\..\HearthstoneQuestOverlay\%(RecursiveDir)%(Filename)%(Extension)')" Condition=" '$(Configuration)' == 'Release' " SkipUnchangedFiles="true" />
   </Target>
+
   <ItemGroup>
     <None Remove="QuestOverlayPlugin.csproj.DotSettings" />
   </ItemGroup>
+
   <ItemGroup>
     <Reference Include="HearthMirror">
       <HintPath>$(HSDTPath)\HearthMirror.dll</HintPath>
@@ -59,6 +64,7 @@
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
+
   <ItemGroup>
     <Compile Update="Controls\HearthstoneTextBlock.xaml.cs">
       <DependentUpon>HearthstoneTextBlock.xaml</DependentUpon>
@@ -79,6 +85,7 @@
       <DependentUpon>QuestView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Nullable" Version="1.3.0">
@@ -86,6 +93,7 @@
     </PackageReference>
     <PackageReference Include="WriteableBitmapEx" Version="1.6.8" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\HSReflection\HSReflection.csproj" />
     <ProjectReference Include="..\TextureExtractor\TextureExtractor.csproj" />
@@ -95,12 +103,15 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
+
   <ItemGroup>
     <Resource Include="Resources\Frame.png" />
     <Resource Include="Resources\QuestIcon.png" />
     <Resource Include="Resources\Rewards_Track_-_XP_Boost.png" />
   </ItemGroup>
+
   <ItemGroup>
     <None Include="Resources\Games-icon.png" />
   </ItemGroup>
+
 </Project>
